@@ -89,6 +89,9 @@ skill_caster_check: yes
 // Should ground placed skills be removed as soon as the caster dies? [Note 4]
 clear_skills_on_death: 15
 
+// Should ground placed skills be removed when the caster changes maps? [Note 4]
+clear_skills_on_warp: 15
+
 //Setting this to YES will override the target mode of ground-based skills with the flag 0x01 to "No Enemies"
 //The two skills affected by default are Pneuma and Safety Wall (if set to yes, those two skills will not protect everyone, but only allies)
 //See db/skill_unit_db.txt for more info.
@@ -123,8 +126,7 @@ gvg_traps_target_all: 1
 // Some traps settings (add as necessary):
 // 1: Traps are invisible to those who come into view of it. When unset, all traps are visible at all times.
 //    (Invisible traps can be revealed through Hunter's Detecting skill)
-// 2: Traps are removed on map-change. When unset, traps last until they time-out.
-traps_setting: 2
+traps_setting: 0
 
 // Whether placed down skills will check walls (Note 1)
 // (Makes it so that Storm Gust/Lord of Vermillion/etc when casted next to a wall, won't hit on the other side) 
