@@ -3272,7 +3272,6 @@ int pc_setpos(struct map_session_data *sd,unsigned short mapindex,int x,int y,in
 	{	//Misc map-changing settings
 		party_send_dot_remove(sd); //minimap dot fix [Kevin]
 		guild_send_dot_remove(sd);
-		skill_clear_group(&sd->bl, 1|(battle_config.traps_setting&2));
 		if (sd->regen.state.gc)
 			sd->regen.state.gc = 0;
 		if (sd->sc.count)
@@ -3290,6 +3289,8 @@ int pc_setpos(struct map_session_data *sd,unsigned short mapindex,int x,int y,in
 				sd->sc.data[SC_KNOWLEDGE].timer = add_timer(gettick() + skill_get_time(SG_KNOWLEDGE, sd->sc.data[SC_KNOWLEDGE].val1), status_change_timer, sd->bl.id, SC_KNOWLEDGE);
 			}
 		}
+		if (battle_config.clear_unit_onwarp&BL_PC)
+			skill_clear_unitgroup(&sd->bl);
 	}
 
 	if(m<0){
